fix: fix sonar issues